--- a/index.html
+++ b/index.html
@@ -16,7 +16,59 @@
     <aside></aside>
     <main>
       <header></header>
-      <section class="suggestion"></section>
+      <section class="suggestion">
+        <div class="parent">
+          <article class="card" id="article-a">
+            <div class="img-card">
+              <img src="" alt="" />
+              <p>nature</p>
+            </div>
+            <p>Histoire de jardin</p>
+          </article>
+          <article class="card" id="article-b">
+            <div class="img-card">
+              <img src="" alt="" />
+              <p>nature</p>
+            </div>
+            <div></div>
+          </article>
+          <article class="card" id="article-c">
+            <div class="img-card">
+              <img src="" alt="" />
+              <p>nature</p>
+            </div>
+            <div></div>
+          </article>
+          <article class="card" id="article-d">
+            <div class="img-card">
+              <img src="" alt="" />
+              <p>nature</p>
+            </div>
+            <div></div>
+          </article>
+          <article class="card" id="article-e">
+            <div class="img-card">
+              <img src="" alt="" />
+              <p>nature</p>
+            </div>
+            <div></div>
+          </article>
+          <article class="card" id="article-f">
+            <div class="img-card">
+              <img src="" alt="" />
+              <p>nature</p>
+            </div>
+            <div></div>
+          </article>
+          <article class="card" id="article-g">
+            <div class="img-card">
+              <img src="" alt="" />
+              <p>nature</p>
+            </div>
+            <div></div>
+          </article>
+        </div>
+      </section>
       <section class="autres"></section>
       <footer></footer>
     </main>
