--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
       href="https://fonts.googleapis.com/css2?family=Elms+Sans:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20,400,0,0&icon_names=favorite"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
@@ -20,49 +24,63 @@
         <div class="parent">
           <article class="card" id="article-a">
             <div class="img-card">
-              <img src="" alt="" />
+              <div class="like-icon">
+                <span class="material-symbols-outlined"> favorite </span>
+              </div>
               <p>nature</p>
             </div>
             <p>Histoire de jardin</p>
           </article>
           <article class="card" id="article-b">
             <div class="img-card">
-              <img src="" alt="" />
+              <div class="like-icon">
+                <span class="material-symbols-outlined"> favorite </span>
+              </div>
               <p>nature</p>
             </div>
             <div></div>
           </article>
           <article class="card" id="article-c">
             <div class="img-card">
-              <img src="" alt="" />
+              <div class="like-icon">
+                <span class="material-symbols-outlined"> favorite </span>
+              </div>
               <p>nature</p>
             </div>
             <div></div>
           </article>
           <article class="card" id="article-d">
             <div class="img-card">
-              <img src="" alt="" />
+              <div class="like-icon">
+                <span class="material-symbols-outlined"> favorite </span>
+              </div>
               <p>nature</p>
             </div>
             <div></div>
           </article>
           <article class="card" id="article-e">
             <div class="img-card">
-              <img src="" alt="" />
+              <div class="like-icon">
+                <span class="material-symbols-outlined"> favorite </span>
+              </div>
               <p>nature</p>
             </div>
             <div></div>
           </article>
           <article class="card" id="article-f">
             <div class="img-card">
-              <img src="" alt="" />
+              <div class="like-icon">
+                <span class="material-symbols-outlined"> favorite </span>
+              </div>
               <p>nature</p>
             </div>
             <div></div>
           </article>
           <article class="card" id="article-g">
             <div class="img-card">
-              <img src="" alt="" />
+              <div class="like-icon">
+                <span class="material-symbols-outlined"> favorite </span>
+              </div>
               <p>nature</p>
             </div>
             <div></div>
