FIx: grid and suggestions layout

--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
             </div>
             <div></div>
           </article>
+        </div>
+        <section class="enregistrement">
           <article class="card" id="article-f">
             <div class="img-card">
               <div class="like-icon">
@@ -85,7 +87,7 @@
             </div>
             <div></div>
           </article>
-        </div>
+        </section>
       </section>
       <section class="autres"></section>
       <footer></footer>
