Feat: adding autres section

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -11,17 +12,116 @@
     />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20,400,0,0&icon_names=favorite"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
+
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Exercice</title>
   </head>
   <body>
     <aside></aside>
     <main>
       <header></header>
-      <section class="suggestion">
-        <div class="parent">
+      <div class="main-content">
+        <div class="title-btn">
+          <div>
+            <h2>Suggestion</h2>
+            <p><span>Nouveau</span> sport</p>
+          </div>
+          <button>
+            <span class="material-symbols-outlined"> mic </span>Enregistrer un
+            recit
+          </button>
+        </div>
+        <section class="suggestion">
+          <div class="grid">
+            <article class="card" id="article-a">
+              <div class="img-card">
+                <div class="like-icon">
+                  <span class="material-symbols-outlined"> favorite </span>
+                </div>
+                <p>nature</p>
+              </div>
+              <p>Histoire de jardin</p>
+            </article>
+            <article class="card" id="article-b">
+              <div class="img-card">
+                <div class="like-icon">
+                  <span class="material-symbols-outlined"> favorite </span>
+                </div>
+                <p>nature</p>
+              </div>
+              <div></div>
+            </article>
+            <article class="card" id="article-c">
+              <div class="img-card">
+                <div class="like-icon">
+                  <span class="material-symbols-outlined"> favorite </span>
+                </div>
+                <p>nature</p>
+              </div>
+              <div></div>
+            </article>
+            <article class="card" id="article-d">
+              <div class="img-card">
+                <div class="like-icon">
+                  <span class="material-symbols-outlined"> favorite </span>
+                </div>
+                <p>nature</p>
+              </div>
+              <div></div>
+            </article>
+            <article class="card" id="article-e">
+              <div class="img-card">
+                <div class="like-icon">
+                  <span class="material-symbols-outlined"> favorite </span>
+                </div>
+                <p>nature</p>
+              </div>
+              <div></div>
+            </article>
+          </div>
+          <section class="enregistrement">
+            <article class="card" id="article-f">
+              <div class="img-card">
+                <div class="like-icon">
+                  <span class="material-symbols-outlined"> favorite </span>
+                </div>
+                <p>nature</p>
+              </div>
+              <div></div>
+            </article>
+            <article class="card" id="article-g">
+              <div class="img-card">
+                <div class="like-icon">
+                  <span class="material-symbols-outlined"> favorite </span>
+                </div>
+                <p>nature</p>
+              </div>
+              <div></div>
+            </article>
+          </section>
+        </section>
+        <section class="autres">
+          <h2>Dans d'autres categories</h2>
+          <article class="card">
+            <div class="img-card">
+              <div class="like-icon">
+                <span class="material-symbols-outlined"> favorite </span>
+              </div>
+              <p>nature</p>
+            </div>
+            <p>Histoire de jardin</p>
+          </article>
+          <article class="card">
+            <div class="img-card">
+              <div class="like-icon">
+                <span class="material-symbols-outlined"> favorite </span>
+              </div>
+              <p>nature</p>
+            </div>
+            <p>Histoire de jardin</p>
+          </article>
           <article class="card" id="article-a">
             <div class="img-card">
               <div class="like-icon">
@@ -31,65 +131,17 @@
             </div>
             <p>Histoire de jardin</p>
           </article>
-          <article class="card" id="article-b">
+          <article class="card" id="article-a">
             <div class="img-card">
               <div class="like-icon">
                 <span class="material-symbols-outlined"> favorite </span>
               </div>
               <p>nature</p>
             </div>
-            <div></div>
-          </article>
-          <article class="card" id="article-c">
-            <div class="img-card">
-              <div class="like-icon">
-                <span class="material-symbols-outlined"> favorite </span>
-              </div>
-              <p>nature</p>
-            </div>
-            <div></div>
-          </article>
-          <article class="card" id="article-d">
-            <div class="img-card">
-              <div class="like-icon">
-                <span class="material-symbols-outlined"> favorite </span>
-              </div>
-              <p>nature</p>
-            </div>
-            <div></div>
-          </article>
-          <article class="card" id="article-e">
-            <div class="img-card">
-              <div class="like-icon">
-                <span class="material-symbols-outlined"> favorite </span>
-              </div>
-              <p>nature</p>
-            </div>
-            <div></div>
-          </article>
-        </div>
-        <section class="enregistrement">
-          <article class="card" id="article-f">
-            <div class="img-card">
-              <div class="like-icon">
-                <span class="material-symbols-outlined"> favorite </span>
-              </div>
-              <p>nature</p>
-            </div>
-            <div></div>
-          </article>
-          <article class="card" id="article-g">
-            <div class="img-card">
-              <div class="like-icon">
-                <span class="material-symbols-outlined"> favorite </span>
-              </div>
-              <p>nature</p>
-            </div>
-            <div></div>
+            <p>Histoire de jardin</p>
           </article>
         </section>
-      </section>
-      <section class="autres"></section>
+      </div>
       <footer></footer>
     </main>
   </body>
