--- a/index.html
+++ b/index.html
@@ -19,130 +19,165 @@
     <title>Exercice</title>
   </head>
   <body>
-    <aside></aside>
-    <main>
-      <header></header>
-      <div class="main-content">
-        <div class="title-btn">
-          <div>
-            <h2>Suggestion</h2>
-            <p><span>Nouveau</span> sport</p>
-          </div>
-          <button>
-            <span class="material-symbols-outlined"> mic </span>Enregistrer un
-            recit
-          </button>
+    <div class="wrapper">
+      <aside>
+        <div class="app-name-container">
+          <img src="" aria-label="app-name" />
+          <h1 id="app-name" aria-hidden="true">Nom de notre app</h1>
         </div>
-        <section class="suggestion">
-          <div class="grid">
-            <article class="card" id="article-a">
-              <div class="img-card">
-                <div class="like-icon">
-                  <span class="material-symbols-outlined"> favorite </span>
-                </div>
-                <p>nature</p>
-              </div>
-              <p>Histoire de jardin</p>
-            </article>
-            <article class="card" id="article-b">
-              <div class="img-card">
-                <div class="like-icon">
-                  <span class="material-symbols-outlined"> favorite </span>
-                </div>
-                <p>nature</p>
-              </div>
-              <div></div>
-            </article>
-            <article class="card" id="article-c">
-              <div class="img-card">
-                <div class="like-icon">
-                  <span class="material-symbols-outlined"> favorite </span>
-                </div>
-                <p>nature</p>
-              </div>
-              <div></div>
-            </article>
-            <article class="card" id="article-d">
-              <div class="img-card">
-                <div class="like-icon">
-                  <span class="material-symbols-outlined"> favorite </span>
-                </div>
-                <p>nature</p>
-              </div>
-              <div></div>
-            </article>
-            <article class="card" id="article-e">
-              <div class="img-card">
-                <div class="like-icon">
-                  <span class="material-symbols-outlined"> favorite </span>
-                </div>
-                <p>nature</p>
-              </div>
-              <div></div>
-            </article>
+        <nav>
+          <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/">Categories</a></li>
+            <li><a href="/">Favoris</a></li>
+            <li><a href="/">Enregistrer un recit</a></li>
+          </ul>
+        </nav>
+      </aside>
+      <main>
+        <header></header>
+        <div class="main-content">
+          <div class="title-btn">
+            <div class="titles">
+              <h2>Suggestion</h2>
+              <p><span class="orange-color">Nouveau</span> sport</p>
+            </div>
+            <button class="enregistrer-btn">
+              <span class="material-symbols-outlined"> mic </span>Enregistrer un
+              recit
+            </button>
           </div>
-          <section class="enregistrement">
-            <article class="card" id="article-f">
-              <div class="img-card">
-                <div class="like-icon">
-                  <span class="material-symbols-outlined"> favorite </span>
+          <section class="suggestion">
+            <div class="grid">
+              <article class="card" id="article-a">
+                <div class="img-card">
+                  <div class="like-icon">
+                    <span class="material-symbols-outlined"> favorite </span>
+                  </div>
+                  <div class="genre-container">
+                    <p class="genre">nature</p>
+                  </div>
                 </div>
-                <p>nature</p>
-              </div>
-              <div></div>
-            </article>
-            <article class="card" id="article-g">
-              <div class="img-card">
-                <div class="like-icon">
-                  <span class="material-symbols-outlined"> favorite </span>
+                <p>Histoire de jardin</p>
+              </article>
+              <article class="card" id="article-b">
+                <div class="img-card">
+                  <div class="like-icon">
+                    <span class="material-symbols-outlined"> favorite </span>
+                  </div>
+                  <div class="genre-container">
+                    <p class="genre">nature</p>
+                  </div>
                 </div>
-                <p>nature</p>
-              </div>
-              <div></div>
-            </article>
+                <div></div>
+              </article>
+              <article class="card" id="article-c">
+                <div class="img-card">
+                  <div class="like-icon">
+                    <span class="material-symbols-outlined"> favorite </span>
+                  </div>
+                  <div class="genre-container">
+                    <p class="genre">nature</p>
+                  </div>
+                </div>
+                <div></div>
+              </article>
+              <article class="card" id="article-d">
+                <div class="img-card">
+                  <div class="like-icon">
+                    <span class="material-symbols-outlined"> favorite </span>
+                  </div>
+                  <div class="genre-container">
+                    <p class="genre">nature</p>
+                  </div>
+                </div>
+                <div></div>
+              </article>
+              <article class="card" id="article-e">
+                <div class="img-card">
+                  <div class="like-icon">
+                    <span class="material-symbols-outlined"> favorite </span>
+                  </div>
+                  <div class="genre-container">
+                    <p class="genre">nature</p>
+                  </div>
+                </div>
+                <div></div>
+              </article>
+            </div>
+            <section class="enregistrement">
+              <article class="card" id="article-f">
+                <div class="img-card">
+                  <div class="like-icon">
+                    <span class="material-symbols-outlined"> favorite </span>
+                  </div>
+                  <p>nature</p>
+                </div>
+                <div></div>
+              </article>
+              <article class="card" id="article-g">
+                <div class="img-card">
+                  <div class="like-icon">
+                    <span class="material-symbols-outlined"> favorite </span>
+                  </div>
+                  <p>nature</p>
+                </div>
+                <div></div>
+              </article>
+            </section>
           </section>
-        </section>
-        <section class="autres">
-          <h2>Dans d'autres categories</h2>
-          <article class="card">
-            <div class="img-card">
-              <div class="like-icon">
-                <span class="material-symbols-outlined"> favorite </span>
-              </div>
-              <p>nature</p>
+          <section class="autres">
+            <h2>Dans d'autres categories</h2>
+            <div class="content">
+              <article class="card">
+                <div class="img-card">
+                  <div class="like-icon">
+                    <span class="material-symbols-outlined"> favorite </span>
+                  </div>
+                  <div class="genre-container">
+                    <p class="genre">nature</p>
+                  </div>
+                </div>
+                <p>Histoire de jardin</p>
+              </article>
+              <article class="card">
+                <div class="img-card">
+                  <div class="like-icon">
+                    <span class="material-symbols-outlined"> favorite </span>
+                  </div>
+                  <div class="genre-container">
+                    <p class="genre">nature</p>
+                  </div>
+                </div>
+                <p>Histoire de jardin</p>
+              </article>
+              <article class="card" id="article-a">
+                <div class="img-card">
+                  <div class="like-icon">
+                    <span class="material-symbols-outlined"> favorite </span>
+                  </div>
+                  <div class="genre-container">
+                    <p class="genre">nature</p>
+                  </div>
+                </div>
+                <p>Histoire de jardin</p>
+              </article>
+              <article class="card" id="article-a">
+                <div class="img-card">
+                  <div class="like-icon">
+                    <span class="material-symbols-outlined"> favorite </span>
+                  </div>
+                  <div class="genre-container">
+                    <p class="genre">nature</p>
+                  </div>
+                </div>
+                <p>Histoire de jardin</p>
+              </article>
             </div>
-            <p>Histoire de jardin</p>
-          </article>
-          <article class="card">
-            <div class="img-card">
-              <div class="like-icon">
-                <span class="material-symbols-outlined"> favorite </span>
-              </div>
-              <p>nature</p>
-            </div>
-            <p>Histoire de jardin</p>
-          </article>
-          <article class="card" id="article-a">
-            <div class="img-card">
-              <div class="like-icon">
-                <span class="material-symbols-outlined"> favorite </span>
-              </div>
-              <p>nature</p>
-            </div>
-            <p>Histoire de jardin</p>
-          </article>
-          <article class="card" id="article-a">
-            <div class="img-card">
-              <div class="like-icon">
-                <span class="material-symbols-outlined"> favorite </span>
-              </div>
-              <p>nature</p>
-            </div>
-            <p>Histoire de jardin</p>
-          </article>
-        </section>
-      </div>
-      <footer></footer>
-    </main>
+          </section>
+        </div>
+        <footer></footer>
+      </main>
+    </div>
   </body>
 </html>
