--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
           <h1 id="app-name" aria-hidden="true">Nom de notre app</h1>
         </div>
         <nav>
+          <h2 class="menu-title">Menu</h2>
           <ul>
             <li><a href="/">Home</a></li>
             <li><a href="/">Categories</a></li>
