must fix styling, add true style and make footer

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <p class="genre">nature</p>
                   </div>
                 </div>
-                <div></div>
+                <p>Everest</p>
               </article>
               <article class="card" id="article-c">
                 <div class="img-card">
