--- a/V2/index.html
+++ b/V2/index.html
@@ -11,68 +11,82 @@
 		<title>StoryLoop</title>
 	</head>
 	<body>
-			<aside>
-				<div class="app-name">
+		<aside>
+			<div class="app-name">
+				<img src="../assets/app.png" alt="" />
+				<h1>Nom de notre app</h1>
+			</div>
+			<section class="menu">
+				<h2 class="menu-gray">MENU</h2>
+				<nav>
+					<ul>
+						<li>
+							<img src="../assets/home.png" alt="" /><a
+								class="color-orange"
+								href="/"
+								>Home</a
+							>
+						</li>
+						<li>
+							<img src="../assets/categories.png" alt="" /><a
+								class="color-black"
+								href="/"
+								>Catefories</a
+							>
+						</li>
+						<li>
+							<img src="../assets/favoris.png" alt="" /><a
+								class="color-black"
+								href="/"
+								>Favoris</a
+							>
+						</li>
+						<li>
+							<img src="../assets/enregistrer.png" alt="" /><a
+								class="color-black"
+								href="/"
+								>Enregistrer un recit</a
+							>
+						</li>
+					</ul>
+				</nav>
+			</section>
+		</aside>
+		<main>
+			<header>
+				<search>
+					<form action="/" method="post" role="search" class="search-bar">
+						<input
+							type="search"
+							name="q"
+							placeholder="search"
+							aria-label="Search the site"
+							required
+							autocomplete="off"
+						/>
+					</form>
+				</search>
+				<div class="user">
+					<p class="gray">UserName</p>
 					<img src="../assets/app.png" alt="" />
-					<h1>Nom de notre app</h1>
 				</div>
-				<section class="menu">
-					<h2 class="menu-gray">MENU</h2>
-					<nav>
-						<ul>
-							<li>
-								<img src="../assets/home.png" alt="" /><a
-									class="color-orange"
-									href="/"
-									>Home</a
-								>
-							</li>
-							<li>
-								<img src="../assets/categories.png" alt="" /><a
-									class="color-black"
-									href="/"
-									>Catefories</a
-								>
-							</li>
-							<li>
-								<img src="../assets/favoris.png" alt="" /><a
-									class="color-black"
-									href="/"
-									>Favoris</a
-								>
-							</li>
-							<li>
-								<img src="../assets/enregistrer.png" alt="" /><a
-									class="color-black"
-									href="/"
-									>Enregistrer un recit</a
-								>
-							</li>
-						</ul>
-					</nav>
+			</header>
+			<div class="content-container">
+				<section class="suggestion">
+					<hgroup>
+						<h2>Suggestion</h2>
+						<p class="black"><span class="orange">Nouveau</span> sport</p>
+					</hgroup>
+					<article class="card"></article>
+					<article class="card"></article>
+					<article class="card"></article>
+					<article class="card"></article>
+					<article class="card"></article>
 				</section>
-			</aside>
-			<main>
-				<header>
-					<search>
-						<form action="/" method="post" role="search" class="search-bar">
-							<input
-								type="search"
-								name="q"
-								placeholder="search"
-								aria-label="Search the site"
-								required
-								autocomplete="off"
-							/>
-						</form>
-					</search>
-					<div class="user">
-						<p class="gray">UserName</p>
-						<img src="../assets/app.png" alt="" />
-					</div>
-				</header>
-				<div></div>
-				<footer></footer>
-			</main>
+				<section class="autre"></section>
+				<progress id="file" max="100" value="70">70%</progress>
+			</div>
+			<footer></footer>
+		</main>
 	</body>
 </html>
