--- a/V2/index.html
+++ b/V2/index.html
@@ -7,6 +7,10 @@
 			href="https://fonts.googleapis.com/css2?family=Elms+Sans:ital,wght@0,100..900;1,100..900&display=swap"
 			rel="stylesheet"
 		/>
+		<link
+			rel="stylesheet"
+			href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+		/>
 		<link rel="stylesheet" href="style.css" />
 		<title>StoryLoop</title>
 	</head>
@@ -73,17 +77,28 @@
 			</header>
 			<div class="content-container">
 				<section class="suggestion">
-					<hgroup>
-						<h2>Suggestion</h2>
-						<p class="black"><span class="orange">Nouveau</span> sport</p>
-					</hgroup>
-					<article class="card"></article>
-					<article class="card"></article>
-					<article class="card"></article>
-					<article class="card"></article>
-					<article class="card"></article>
+					<div class="suggestion-title">
+						<hgroup>
+							<h2>Suggestion</h2>
+							<p class="black"><span class="orange">Nouveau</span> sport</p>
+						</hgroup>
+						<button class="bg-color-orange">
+							<span class="material-symbols-outlined"> mic </span>Enregistrer un
+							recit
+						</button>
+					</div>
+					<div class="grid">
+						<article class="card"></article>
+						<article class="card"></article>
+						<article class="card"></article>
+						<article class="card"></article>
+						<article class="card"></article>
+					</div>
 				</section>
-				<section class="autre"></section>
+				<section class="autre">
+					<article></article>
+					<article></article>
+				</section>
 				<progress id="file" max="100" value="70">70%</progress>
 			</div>
 			<footer></footer>
