Fix: search bar sizing and overlaying problems fixed

--- a/V2/index.html
+++ b/V2/index.html
@@ -63,7 +63,7 @@
 						<input
 							type="search"
 							name="q"
-							placeholder="search"
+							placeholder="Search..."
 							aria-label="Search the site"
 							required
 							autocomplete="off"
