--- a/V2/index.html
+++ b/V2/index.html
@@ -88,11 +88,51 @@
 						</button>
 					</div>
 					<div class="grid">
-						<article class="card"></article>
-						<article class="card"></article>
-						<article class="card"></article>
-						<article class="card"></article>
-						<article class="card"></article>
+						<article class="card" id="a">
+							<div class="empty-img">
+								<span class="material-symbols-outlined" data-icon="favorite">
+									favorite
+								</span>
+								<p class="card-genre">nature</p>
+							</div>
+							<h3 class="card-title">Title</h3>
+						</article>
+						<article class="card" id="b">
+							<div class="empty-img">
+								<span class="material-symbols-outlined" data-icon="favorite">
+									favorite
+								</span>
+								<p class="card-genre">nature</p>
+							</div>
+							<h3 class="card-title">Title</h3>
+						</article>
+						<article class="card" id="c">
+							<div class="empty-img">
+								<span class="material-symbols-outlined" data-icon="favorite">
+									favorite
+								</span>
+								<p class="card-genre">nature</p>
+							</div>
+							<h3 class="card-title">Title</h3>
+						</article>
+						<article class="card" id="d">
+							<div class="empty-img">
+								<span class="material-symbols-outlined" data-icon="favorite">
+									favorite
+								</span>
+								<p class="card-genre">nature</p>
+							</div>
+							<h3 class="card-title">Title</h3>
+						</article>
+						<article class="card" id="e">
+							<div class="empty-img">
+								<span class="material-symbols-outlined" data-icon="favorite">
+									favorite
+								</span>
+								<p class="card-genre">nature</p>
+							</div>
+							<h3 class="card-title">Title</h3>
+						</article>
 					</div>
 				</section>
 				<section class="autre">
