--- a/V2/index.html
+++ b/V2/index.html
@@ -136,8 +136,48 @@
 					</div>
 				</section>
 				<section class="autre">
-					<article></article>
-					<article></article>
+					<article class="them-play">
+						<img src="../assets/image.png" alt="" role="presentation" />
+						<div class="autre-content">
+							<div class="autre-title">
+								<hgroup>
+									<h3>title</h3>
+									<p>subtitle</p>
+								</hgroup>
+								<span class="material-symbols-outlined" data-icon="favorite">
+									favorite
+								</span>
+							</div>
+							<p class="time">Time</p>
+							<div class="progress">
+								<progress id="file" max="100" value="70">70%</progress
+								><span class="material-symbols-outlined" data-icon="favorite">
+									play_circle
+								</span>
+							</div>
+						</div>
+					</article>
+					<article class="them-play">
+						<img src="../assets/image.png" alt="" role="presentation" />
+						<div class="autre-content">
+							<div class="autre-title">
+								<hgroup>
+									<h3>title</h3>
+									<p>subtitle</p>
+								</hgroup>
+								<span class="material-symbols-outlined" data-icon="favorite">
+									favorite
+								</span>
+							</div>
+							<p class="time">Time</p>
+							<div class="progress">
+								<progress id="file" max="100" value="70">70%</progress
+								><span class="material-symbols-outlined" data-icon="favorite">
+									play_circle
+								</span>
+							</div>
+						</div>
+					</article>
 				</section>
 				<progress id="file" max="100" value="70">70%</progress>
 			</div>
