--- a/V2/index.html
+++ b/V2/index.html
@@ -165,16 +165,19 @@
 									<h3>title</h3>
 									<p>subtitle</p>
 								</hgroup>
+
 								<span class="material-symbols-outlined" data-icon="favorite">
 									favorite
 								</span>
 							</div>
-							<p class="time">Time</p>
 							<div class="progress">
-								<progress id="file" max="100" value="70">70%</progress
-								><span class="material-symbols-outlined" data-icon="favorite">
-									play_circle
-								</span>
+								<p class="time">3min 56s</p>
+								<div class="progress-container">
+									<progress id="file" max="100" value="70">70%</progress
+									><span class="material-symbols-outlined" data-icon="favorite">
+										play_circle
+									</span>
+								</div>
 							</div>
 						</div>
 					</article>
