--- a/V2/index.html
+++ b/V2/index.html
@@ -141,31 +141,9 @@
 						<div class="autre-content">
 							<div class="autre-title">
 								<hgroup>
-									<h3>title</h3>
-									<p>subtitle</p>
+									<h3>Title</h3>
+									<p class="progress-subtitle">subtitle</p>
 								</hgroup>
-								<span class="material-symbols-outlined" data-icon="favorite">
-									favorite
-								</span>
-							</div>
-							<p class="time">Time</p>
-							<div class="progress">
-								<progress id="file" max="100" value="70">70%</progress
-								><span class="material-symbols-outlined" data-icon="favorite">
-									play_circle
-								</span>
-							</div>
-						</div>
-					</article>
-					<article class="them-play">
-						<img src="../assets/image.png" alt="" role="presentation" />
-						<div class="autre-content">
-							<div class="autre-title">
-								<hgroup>
-									<h3>title</h3>
-									<p>subtitle</p>
-								</hgroup>
-
 								<span class="material-symbols-outlined" data-icon="favorite">
 									favorite
 								</span>
@@ -173,16 +151,16 @@
 							<div class="progress">
 								<p class="time">3min 56s</p>
 								<div class="progress-container">
-									<progress id="file" max="100" value="70">70%</progress
-									><span class="material-symbols-outlined" data-icon="favorite">
+									<span class="material-symbols-outlined" data-icon="play">
 										play_circle
 									</span>
+									<progress class="player-progress" max="100" value="70">70%</progress>
 								</div>
 							</div>
 						</div>
 					</article>
 				</section>
-				<progress id="file" max="100" value="70">70%</progress>
+				<progress max="100" value="70">70%</progress>
 			</div>
 			<footer></footer>
 		</main>
