Feat: autres done

--- a/V2/index.html
+++ b/V2/index.html
@@ -88,55 +88,85 @@
 						</button>
 					</div>
 					<div class="grid">
-						<article class="card" id="a">
+						<article class="card" id="a" tabindex="0">
 							<div class="empty-img">
-								<span class="material-symbols-outlined" data-icon="favorite">
-									favorite
-								</span>
+								<div>
+									<span
+										class="material-symbols-outlined"
+										data-icon="favorite"
+										tabindex="0"
+									>
+										favorite
+									</span>
+								</div>
 								<p class="card-genre">nature</p>
 							</div>
 							<h3 class="card-title">Title</h3>
 						</article>
-						<article class="card" id="b">
+						<article class="card" id="b" tabindex="0">
 							<div class="empty-img">
-								<span class="material-symbols-outlined" data-icon="favorite">
-									favorite
-								</span>
+								<div>
+									<span
+										class="material-symbols-outlined"
+										data-icon="favorite"
+										tabindex="0"
+									>
+										favorite
+									</span>
+								</div>
 								<p class="card-genre">nature</p>
 							</div>
 							<h3 class="card-title">Title</h3>
 						</article>
-						<article class="card" id="c">
+						<article class="card" id="c" tabindex="0">
 							<div class="empty-img">
-								<span class="material-symbols-outlined" data-icon="favorite">
-									favorite
-								</span>
+								<div>
+									<span
+										class="material-symbols-outlined"
+										data-icon="favorite"
+										tabindex="0"
+									>
+										favorite
+									</span>
+								</div>
 								<p class="card-genre">nature</p>
 							</div>
 							<h3 class="card-title">Title</h3>
 						</article>
-						<article class="card" id="d">
+						<article class="card" id="d" tabindex="0">
 							<div class="empty-img">
-								<span class="material-symbols-outlined" data-icon="favorite">
-									favorite
-								</span>
+								<div>
+									<span
+										class="material-symbols-outlined"
+										data-icon="favorite"
+										tabindex="0"
+									>
+										favorite
+									</span>
+								</div>
 								<p class="card-genre">nature</p>
 							</div>
 							<h3 class="card-title">Title</h3>
 						</article>
-						<article class="card" id="e">
+						<article class="card" id="e" tabindex="0">
 							<div class="empty-img">
-								<span class="material-symbols-outlined" data-icon="favorite">
-									favorite
-								</span>
+								<div>
+									<span
+										class="material-symbols-outlined"
+										data-icon="favorite"
+										tabindex="0"
+									>
+										favorite
+									</span>
+								</div>
 								<p class="card-genre">nature</p>
 							</div>
 							<h3 class="card-title">Title</h3>
 						</article>
 					</div>
 				</section>
-				<section class="autre">
-					<article class="them-play">
+				<section class="thematique">
+					<article class="card-them-play" tabindex="0">
 						<img src="../assets/image.png" alt="" role="presentation" />
 						<div class="autre-content">
 							<div class="autre-title">
@@ -144,25 +174,154 @@
 									<h3>Title</h3>
 									<p class="progress-subtitle">subtitle</p>
 								</hgroup>
-								<span class="material-symbols-outlined" data-icon="favorite">
-									favorite
-								</span>
+								<div>
+									<span
+										class="material-symbols-outlined"
+										data-icon="favorite"
+										tabindex="0"
+									>
+										favorite
+									</span>
+								</div>
 							</div>
 							<div class="progress">
 								<p class="time">3min 56s</p>
 								<div class="progress-container">
-									<span class="material-symbols-outlined" data-icon="play">
+									<span
+										class="material-symbols-outlined"
+										data-icon="play"
+										tabindex="0"
+									>
 										play_circle
 									</span>
-									<progress class="player-progress" max="100" value="70">70%</progress>
+									<progress class="player-progress" max="100" value="70">
+										70%
+									</progress>
+								</div>
+							</div>
+						</div>
+					</article>
+					<article class="card-them-play" tabindex="0">
+						<img src="../assets/image.png" alt="" role="presentation" />
+						<div class="autre-content">
+							<div class="autre-title">
+								<hgroup>
+									<h3>Title</h3>
+									<p class="progress-subtitle">subtitle</p>
+								</hgroup>
+								<div>
+									<span
+										class="material-symbols-outlined"
+										data-icon="favorite"
+										tabindex="0"
+									>
+										favorite
+									</span>
+								</div>
+							</div>
+							<div class="progress">
+								<p class="time">3min 56s</p>
+								<div class="progress-container">
+									<span
+										class="material-symbols-outlined"
+										data-icon="play"
+										tabindex="0"
+									>
+										play_circle
+									</span>
+									<progress class="player-progress" max="100" value="70">
+										70%
+									</progress>
 								</div>
 							</div>
 						</div>
 					</article>
 				</section>
-				<progress max="100" value="70">70%</progress>
+				<section class="autre">
+					<article class="card-autre" tabindex="0">
+						<div class="empty-img">
+							<div>
+								<span
+									class="material-symbols-outlined"
+									data-icon="favorite"
+									tabindex="0"
+								>
+									favorite
+								</span>
+							</div>
+							<p class="card-genre">nature</p>
+						</div>
+						<h3 class="card-title">Title</h3>
+					</article>
+					<article class="card-autre">
+						<div class="empty-img">
+							<div>
+								<span
+									class="material-symbols-outlined"
+									data-icon="favorite"
+									tabindex="0"
+								>
+									favorite
+								</span>
+							</div>
+							<p class="card-genre">nature</p>
+						</div>
+						<h3 class="card-title">Title</h3>
+					</article>
+					<article class="card-autre" tabindex="0">
+						<div class="empty-img">
+							<div>
+								<span
+									class="material-symbols-outlined"
+									data-icon="favorite"
+									tabindex="0"
+								>
+									favorite
+								</span>
+							</div>
+							<p class="card-genre">nature</p>
+						</div>
+						<h3 class="card-title">Title</h3>
+					</article>
+					<article class="card-autre" tabindex="0">
+						<div class="empty-img">
+							<div>
+								<span
+									class="material-symbols-outlined"
+									data-icon="favorite"
+									tabindex="0"
+								>
+									favorite
+								</span>
+							</div>
+							<p class="card-genre">nature</p>
+						</div>
+						<h3 class="card-title">Title</h3>
+					</article>
+					<article class="card-autre" tabindex="0">
+						<div class="empty-img">
+							<div>
+								<span
+									class="material-symbols-outlined"
+									data-icon="favorite"
+									tabindex="0"
+								>
+									favorite
+								</span>
+							</div>
+							<p class="card-genre">nature</p>
+						</div>
+						<h3 class="card-title">Title</h3>
+					</article>
+				</section>
+				<progress class="default" max="100" value="70">70%</progress>
 			</div>
-			<footer></footer>
+			<footer>
+				<img class="footer-img" src="../assets/image.png" alt="" />
+				<div class="footer-content">
+					<progress class="player-progress" max="100" value="70">70%</progress>
+				</div>
+			</footer>
 		</main>
 	</body>
 </html>
