--- a/V2/index.html
+++ b/V2/index.html
@@ -319,6 +319,24 @@
 			<footer>
 				<img class="footer-img" src="../assets/image.png" alt="" />
 				<div class="footer-content">
+					<div class="main-footer-content">
+						<hgroup>
+							<h3>Title</h3>
+							<p class="progress-subtitle">Subtitle</p>
+						</hgroup>
+						<div class="player-icons">
+							<span class="material-symbols-outlined" tabindex="0">
+								skip_previous
+							</span>
+							<span class="material-symbols-outlined" tabindex="0">
+								play_circle
+							</span>
+							<span class="material-symbols-outlined" tabindex="0">
+								skip_next
+							</span>
+						</div>
+						<div></div>
+					</div>
 					<progress class="player-progress" max="100" value="70">70%</progress>
 				</div>
 			</footer>
